--- a/html/includes/_header.html
+++ b/html/includes/_header.html
@@ -1,57 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css">
-    <link href="css/media.css" rel="stylesheet">
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Title</title>
+	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,300i,400,500,700" rel="stylesheet">
+	<link href="css/media.css" rel="stylesheet">
+	<link type="text/css" rel="stylesheet" href="css/icomoon.css" media="all">
+	<link href="css/style.css" rel="stylesheet">
 </head>
-<header>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="container-header">
-                    <h1><a href="#" class="logo"><img src="img/logo.png" alt="Main logo"></a></h1>
-                    <div class="button_container" id="toggle">
-                        <span class="top"></span>
-                        <span class="middle"></span>
-                        <span class="bottom"></span>
-                    </div>
-                    <nav>
-                        <ul class="main-nav">
-                            <li><a href="#">Shoes</a></li>
-                            <li><a href="#">Boots</a></li>
-                            <li><a href="#">View All</a></li>
-                            <li><a href="#">Lookbook</a></li>
-                            <li><a href="#">History</a></li>
-                        </ul>
-                    </nav>
-                    <div class="right-menu-block">
-                        <form action="#">
-                            <input type="text" name="text" placeholder="Search">
-                            <input type="submit" value="" name="submit">
-                        </form>
-                        <div class="icon-bar">
-
-                            <div class="item-profile"><a href="#"></a></div>
-                            <div class="item-vote"><a href="#"></a></div>
-                            <div class="item-sale">
-                                <a href="#"></a>
-                                <div class="count-sale">02</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    </div>
-    </div>
-    <!--</div>-->
-</header>
+<body>
+<div class="main-container">
+	<header class="page-header">
+		<h1 class="visually-hidden">Lorem ipsum dolor sit amet, consectetur</h1>
+		<div class="page-header__logo">
+			<a href=""><img src="img/logo.png" alt=""></a>
+		</div>
+		<div class="navigation">
+			<a class="menu-btn">
+				<i class="icon-menu2"></i>
+			</a>
+			<nav role="navigation" class="main-nav">
+				<ul>
+					<li class="main-nav__items"><a href="#">Home</a></li>
+					<li class="main-nav__items"><a href="#">Store</a></li>
+					<li class="main-nav__items"><a href="#">Blog </a></li>
+					<li class="main-nav__items"><a href="#">About </a></li>
+					<li class="main-nav__items"><a href="#">Contact</a></li>
+				</ul>
+			</nav>
+			<form class="search-page" action="">
+				<input class="search-page__field" type="text" name="search-page">
+				<input class="search-page__submit" type="submit" name="submit" value=" " >
+			</form>
+			<ul class="social-link-set">
+				<li class="social-link-set__item">
+					<a href=""><i class="icon-facebook"></i></a>
+				</li>
+				<li class="social-link-set__item">
+					<a href=""><i class="icon-twitter"></i></a>
+				</li>
+				<li class="social-link-set__item">
+					<a href=""><i class="icon-google-plus"></i></a>
+				</li>
+			</ul>
+			<div class="user">
+				<a href=""><i class="icon-user"></i></a>
+			</div>
+		</div>
+	</header>
 
 
