--- a/html/includes/_footer.html
+++ b/html/includes/_footer.html
@@ -1,4 +1,4 @@
-
+</div>
 <!--[if lt IE 9]>
 <script src="js/html5shiv/es5-shim.min.js"></script>
 <script src="js/html5shiv/html5shiv.min.js"></script>
