complete main page

--- a/html/includes/_footer.html
+++ b/html/includes/_footer.html
@@ -1,3 +1,29 @@
+<footer class="footer">
+	<ul class="footer-nav">
+		<li class="footer-nav__items"><a href="#">Home</a></li>
+		<li class="footer-nav__items"><a href="#">Store</a></li>
+		<li class="footer-nav__items"><a href="#">Blog </a></li>
+		<li class="footer-nav__items"><a href="#">About </a></li>
+		<li class="footer-nav__items"><a href="#">Contact</a></li>
+	</ul>
+	<ul class="footer-social">
+		<li class="footer-social__items">
+			<a class="footer-social__items--facebook" href=""><i class="icon-facebook"></i></a>
+		</li>
+		<li class="footer-social__items">
+			<a class="footer-social__items--twitter" href=""><i class="icon-twitter"></i></a>
+		</li>
+		<li class="footer-social__items">
+			<a class="footer-social__items--googleplus" href=""><i class="icon-google-plus"></i></a>
+		</li>
+		<li class="footer-social__items">
+			<a class="footer-social__items--linkedin" href=""><i class="icon-linkedin"></i></a>
+		</li>
+	</ul>
+
+</footer>
+
+
 </div>
 <!--[if lt IE 9]>
 <script src="js/html5shiv/es5-shim.min.js"></script>
