--- a/html/includes/_header.html
+++ b/html/includes/_header.html
@@ -9,7 +9,7 @@
 	<link type="text/css" rel="stylesheet" href="css/icomoon.css" media="all">
 	<link href="css/style.css" rel="stylesheet">
 </head>
-<body>
+<body class="bg-color">
 <div class="main-container">
 	<header class="page-header">
 		<h1 class="visually-hidden">Lorem ipsum dolor sit amet, consectetur</h1>
