--- a/app/css/style.css
+++ b/app/css/style.css
@@ -423,6 +423,15 @@ img {
   clip: rect(0, 0, 0, 0);
   overflow: hidden; }
 
+.main-container {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  min-height: 100vh; }
+
 .page-header {
   padding-top: 1rem; }
 
@@ -554,12 +563,617 @@ img {
       color: #fff;
       background: #56ccc8; }
 
-.icon-facebook {
-  background: red;
+.communication__navigation {
+  float: left;
+  width: 50%;
+  margin-right: 1.5%;
+  margin-top: 1rem; }
+
+.column-block {
+  margin: 0;
+  padding: 0;
+  float: left;
+  width: 48%;
+  min-height: 695px; }
+
+.communication-menu {
+  margin: 0;
+  padding-left: 0; }
+
+.communication-menu__item a {
   display: block;
-  width: 40px;
-  height: 40px;
+  height: 3.75rem;
+  padding-left: 1.3rem;
+  background-color: white;
+  line-height: 3.75rem;
+  color: #475055;
+  border-bottom: 1px solid #e1e5e7; }
+  .communication-menu__item a:hover {
+    border-bottom: 1px solid #56ccc8;
+    background-color: #56ccc8;
+    color: white; }
+    .communication-menu__item a:hover i {
+      color: white; }
+
+.communication-menu__item i {
+  font-size: 1.2rem;
+  margin-right: 1.4rem;
+  color: #c5cdd1; }
+
+.contact {
+  margin-top: 0;
+  padding: 2rem 0 1.9rem 1.3rem;
+  background: #c5cdd1; }
+
+.contact__items:not(:last-child) {
+  margin-bottom: 2rem; }
+
+.contact__items p {
+  padding-left: 2rem;
+  font-size: 0.875rem;
+  color: white;
+  line-height: 1rem; }
+
+.contact__items address {
+  padding-left: 2rem;
+  font-size: 0.875rem;
+  color: white;
+  line-height: 1.25rem; }
+
+.contact__items a {
+  display: block;
+  margin-bottom: 5px;
+  padding-left: 2rem;
+  color: white; }
+  .contact__items a:hover {
+    opacity: .7; }
+
+.contact__icon {
+  float: left; }
+  .contact__icon i {
+    font-size: 1.2rem;
+    color: white; }
+  .contact__icon .icon-location {
+    font-size: 1.4rem; }
+
+.sub-menu-container {
+  float: right;
+  width: 52%;
+  min-height: 695px;
+  background-color: #152840; }
+
+.sub-menu {
+  position: relative;
+  margin: 0;
+  padding: 1.8rem 0 1.5rem 2.1rem;
+  border-bottom: 1px solid #49647e; }
+  .sub-menu:before {
+    content: ' ';
+    display: block;
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: 34px;
+    right: 26px;
+    background: url("../img/arrow.png") no-repeat; }
+  .sub-menu:hover {
+    background: #263a54; }
+    .sub-menu:hover:before {
+      width: 20px;
+      height: 20px;
+      background: url("../img/arrow-rotate.png") no-repeat; }
+
+.sub-menu:last-child {
+  padding-bottom: 3.55rem;
+  border-bottom: none; }
+
+.sub-menu__title {
+  margin-bottom: 1rem;
+  line-height: 1.875rem;
+  color: #56ccc8; }
+
+.sub-menu__items {
+  margin-left: 0;
+  line-height: .5; }
+  .sub-menu__items a {
+    font-size: 0.938rem;
+    color: white; }
+    .sub-menu__items a:hover {
+      color: #56ccc8; }
+
+.sub-menu__items:not(:last-child) {
+  margin-bottom: 18px; }
+
+.social {
+  float: right;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  width: 48.5%; }
+
+.social-menu {
+  padding: 2rem 1.5rem 1rem;
+  width: 48.5%;
+  list-style-type: none;
+  background: white; }
+
+.social-menu__item {
+  margin-bottom: 2rem; }
+  .social-menu__item a {
+    display: block;
+    height: 2.5rem;
+    vertical-align: middle; }
+    .social-menu__item a:hover .social-menu__icon-block {
+      background: #4fc6f8; }
+    .social-menu__item a:hover .social-menu__text-title {
+      color: #4fc6f8; }
+
+.social-menu__item:last-child {
+  margin-bottom: 0; }
+
+.social-menu__icon-block {
+  float: left;
+  width: 2.5rem;
+  height: 2.5rem;
+  background-color: #c5cdd1;
+  line-height: 2.5rem;
   border-radius: 50%;
+  text-align: center; }
+  .social-menu__icon-block i {
+    font-size: 1.2rem;
+    color: white; }
+
+.social-menu__text-title {
+  display: block;
+  padding: 10px 0 0 4.5rem;
+  color: #475055; }
+
+.social-widget-container {
+  width: 48.5%;
+  margin-top: 1rem; }
+
+.social-widget {
+  margin-bottom: 1rem;
+  cursor: pointer; }
+  .social-widget img {
+    width: 100%; }
+  .social-widget:hover {
+    transition: .3s;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4);
+    -webkit-transform: scale(1.02);
+    -ms-transform: scale(1.02);
+    transform: scale(1.02); }
+
+.sign-in {
+  width: 100%;
+  background: white; }
+
+.sign-in__title {
   text-align: center;
-  font-size: 1.3rem;
-  line-height: 5px; }
+  font-weight: 300;
+  margin: .5rem 0 1rem; }
+
+.sign-in_descr {
+  display: block;
+  text-align: center;
+  font-weight: 100; }
+
+.sign-in__list {
+  list-style-type: none;
+  text-align: center;
+  padding-left: 0; }
+
+.sign-in__items {
+  display: inline-block; }
+  .sign-in__items a {
+    display: block;
+    height: 2.5rem;
+    width: 2.5rem;
+    color: white;
+    border-radius: 50%;
+    line-height: 2.5rem;
+    transition: all .3s ease; }
+  .sign-in__items .sign-in__items--facebook {
+    background: #4d6baa; }
+  .sign-in__items .sign-in__items--twitter {
+    background: #4fc6f8; }
+  .sign-in__items .sign-in__items--googleplus {
+    background: #ea6060; }
+  .sign-in__items .sign-in__items--linkedin {
+    background: #238cc8; }
+  .sign-in__items:hover .sign-in__items--facebook {
+    background: white;
+    color: #4d6baa;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4); }
+  .sign-in__items:hover .sign-in__items--twitter {
+    background: white;
+    color: #4fc6f8;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4); }
+  .sign-in__items:hover .sign-in__items--googleplus {
+    background: white;
+    color: #ea6060;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4); }
+  .sign-in__items:hover .sign-in__items--linkedin {
+    background: white;
+    color: #238cc8;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4); }
+  .sign-in__items:active {
+    -webkit-transform: scale(0.95);
+    -ms-transform: scale(0.95);
+    transform: scale(0.95); }
+
+.sign-in__items:not(:last-child) {
+  margin-right: 1.5rem; }
+
+.subscription {
+  margin-top: 1rem;
+  padding-bottom: .5rem;
+  width: 100%;
+  background: white; }
+
+.subscription__title {
+  margin: .5rem 0 1rem;
+  text-align: center;
+  font-weight: 300; }
+
+.subscription__descr {
+  display: block;
+  margin-bottom: 1rem;
+  text-align: center;
+  font-weight: 100; }
+
+.subscription-form {
+  text-align: center; }
+
+.subscription-form__email {
+  margin-right: 1rem;
+  padding: 0 5px;
+  width: 18rem;
+  height: 2.438rem;
+  border: 0.063rem solid #dde2e4; }
+  .subscription-form__email:focus {
+    border: none;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4); }
+
+.subscription-form__submit {
+  width: 6.063rem;
+  height: 2.438rem;
+  background-color: #ea6060;
+  border: none;
+  border-radius: 0.188rem 0.25rem 0.25rem 0.188rem;
+  font-size: 0.938rem;
+  font-weight: 500;
+  color: white;
+  transition: .3s; }
+  .subscription-form__submit:hover {
+    color: #ea6060;
+    background: white;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4); }
+
+input[type="email"]::-webkit-input-placeholder {
+  text-indent: 0;
+  transition: text-indent 0.3s ease; }
+
+input[type="email"]::-moz-placeholder {
+  text-indent: 0;
+  transition: text-indent 0.3s ease; }
+
+input[type="email"]:-moz-placeholder {
+  text-indent: 0;
+  transition: text-indent 0.3s ease; }
+
+input[type="email"]:-ms-input-placeholder {
+  text-indent: 0;
+  transition: text-indent 0.3s ease; }
+
+input[type="email"]:focus::-webkit-input-placeholder {
+  text-indent: 500px;
+  transition: text-indent 0.3s ease; }
+
+input[type="email"]:focus::-moz-placeholder {
+  text-indent: 500px;
+  transition: text-indent 0.3s ease; }
+
+input[type="email"]:focus:-moz-placeholder {
+  text-indent: 500px;
+  transition: text-indent 0.3s ease; }
+
+input[type="email"]:focus:-ms-input-placeholder {
+  text-indent: 500px;
+  transition: text-indent 0.3s ease; }
+
+.main-content {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-justify-content: space-around;
+  -ms-flex-pack: distribute;
+  justify-content: space-around; }
+
+.portfolio {
+  width: 74%; }
+
+.tabs {
+  display: table;
+  table-layout: fixed;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  -webkit-transform: translateY(5px);
+  -ms-transform: translateY(5px);
+  transform: translateY(5px); }
+  .tabs > li {
+    transition-duration: .25s;
+    display: table-cell;
+    list-style: none;
+    text-align: center;
+    padding: 20px 20px 25px 20px;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+    color: white; }
+    .tabs > li:before {
+      z-index: -1;
+      position: absolute;
+      content: "";
+      width: 100%;
+      height: 120%;
+      top: 0;
+      left: 0;
+      background-color: rgba(255, 255, 255, 0.3);
+      -webkit-transform: translateY(100%);
+      -ms-transform: translateY(100%);
+      transform: translateY(100%);
+      transition-duration: .25s; }
+    .tabs > li:hover:before {
+      -webkit-transform: translateY(70%);
+      -ms-transform: translateY(70%);
+      transform: translateY(70%); }
+    .tabs > li.active {
+      color: #50555a; }
+      .tabs > li.active:before {
+        transition-duration: .5s;
+        background-color: white;
+        -webkit-transform: translateY(0);
+        -ms-transform: translateY(0);
+        transform: translateY(0); }
+
+.tab-content {
+  margin: 0;
+  padding: 0;
+  background-color: white;
+  position: relative;
+  width: 100%; }
+  .tab-content > li {
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: none;
+    list-style: none; }
+    .tab-content > li .content-wrapper {
+      text-align: center;
+      width: 100%;
+      padding: 3rem 1rem;
+      background-color: white; }
+
+.content-wrapper img {
+  width: 100%;
+  height: auto;
+  border-radius: 5px; }
+
+.tab-content__item {
+  padding: 3rem;
+  border-bottom: 1px solid rgba(71, 80, 85, 0.2); }
+
+.tab-content__item:last-child {
+  border-bottom: none; }
+
+.tab-content__img-wrap {
+  display: block;
+  float: left;
+  max-width: 400px;
+  margin-right: 2rem; }
+
+.tab-content__title {
+  text-align: left;
+  font-weight: 300;
+  font-size: 2rem; }
+
+.tab-content__descr {
+  display: block;
+  text-align: left;
+  line-height: 1.2rem;
+  font-weight: 300; }
+  .tab-content__descr a {
+    display: block;
+    padding-right: 1rem;
+    color: #56ccc8; }
+
+.right-bar {
+  width: 24%;
+  margin-top: 3.75rem;
+  padding: 1rem 1rem;
+  background: white; }
+  .right-bar article {
+    padding-bottom: 3rem;
+    border-bottom: 1px solid rgba(71, 80, 85, 0.2); }
+
+.mev-company__logo {
+  text-align: center; }
+
+.mev-company__quote {
+  margin-left: 1rem;
+  margin-right: 1rem;
+  font: italic 300 1rem "Roboto"; }
+
+.mev-company__link {
+  font: 100 .8rem "Robot"; }
+  .mev-company__link a {
+    text-align: right;
+    font: 100 .8rem "Robot";
+    color: inherit; }
+
+.advantages {
+  text-align: center; }
+
+.mev-info__title {
+  font: 300  1.5rem "Roboto";
+  text-align: center; }
+
+.mev-info__quote {
+  margin-left: 1rem;
+  margin-right: 1rem;
+  font: italic 300 1rem "Roboto"; }
+
+.advantages__item {
+  margin-bottom: 2rem; }
+  .advantages__item p {
+    font: 300 1rem "Roboto"; }
+
+.advantages__logo {
+  display: block;
+  text-align: center;
+  margin: 0 auto; }
+
+.advantages__title {
+  font: 300  1.3rem "Roboto"; }
+
+.advantages__list {
+  margin-bottom: 1.5rem;
+  text-align: left;
+  list-style-type: disc;
+  font: 300  1rem/1.5rem "Roboto"; }
+
+.advantages__link {
+  display: inline-block;
+  padding-bottom: 3px;
+  color: #ad0000;
+  font-size: .9rem;
+  border-bottom: 1px solid #d9d8d3; }
+  .advantages__link:hover {
+    color: #676765;
+    border-bottom: 1px solid #676765; }
+
+.combo-box__title {
+  font: 300 1.5rem "Roboto";
+  text-align: center; }
+
+.colors {
+  text-align: center;
+  margin: 0;
+  padding: 1rem 0; }
+  .colors > li {
+    list-style: none;
+    width: 2rem;
+    height: 2rem;
+    margin-bottom: 1rem;
+    border-radius: 50%;
+    border-bottom: 5px solid rgba(0, 0, 0, 0.1);
+    display: inline-block;
+    margin: 1rem 0;
+    cursor: pointer;
+    transition-duration: .2s;
+    box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2); }
+    .colors > li:hover {
+      -webkit-transform: scale(1.2);
+      -ms-transform: scale(1.2);
+      transform: scale(1.2);
+      border-bottom: 10px solid rgba(0, 0, 0, 0.15);
+      box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2); }
+    .colors > li.active-color {
+      -webkit-transform: scale(1.2) translateY(-10px);
+      -ms-transform: scale(1.2) translateY(-10px);
+      transform: scale(1.2) translateY(-10px);
+      box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
+      border-bottom: 20px solid rgba(0, 0, 0, 0.15); }
+    .colors > li:nth-child(1) {
+      background-color: #2ecc71; }
+    .colors > li:nth-child(2) {
+      background-color: #D64A4B; }
+    .colors > li:nth-child(3) {
+      background-color: #8e44ad; }
+    .colors > li:nth-child(4) {
+      background-color: #465e78; }
+    .colors > li:nth-child(5) {
+      background-color: #bdc3c7; }
+
+.bg-color {
+  background-color: #465e78;
+  transition-duration: 1s; }
+
+.footer {
+  margin-top: 1rem;
+  padding: 1rem 3rem 0 0;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  background: white; }
+
+.footer-nav {
+  margin-top: 1.5rem; }
+  .footer-nav li {
+    display: inline-block; }
+
+.footer-nav__items:not(:last-child) {
+  margin-right: 1rem; }
+
+.footer-nav__items a {
+  color: #475055; }
+  .footer-nav__items a:hover {
+    color: #56ccc8; }
+
+.footer-social li {
+  display: inline-block; }
+
+.footer-social__items:not(:last-child) {
+  margin-right: 1rem; }
+
+.footer-social__items {
+  display: inline-block; }
+  .footer-social__items a {
+    display: block;
+    height: 2.5rem;
+    width: 2.5rem;
+    color: white;
+    text-align: center;
+    border-radius: 50%;
+    line-height: 2.5rem;
+    transition: all .3s ease; }
+  .footer-social__items .footer-social__items--facebook {
+    background: #4d6baa; }
+  .footer-social__items .footer-social__items--twitter {
+    background: #4fc6f8; }
+  .footer-social__items .footer-social__items--googleplus {
+    background: #ea6060; }
+  .footer-social__items .footer-social__items--linkedin {
+    background: #238cc8; }
+  .footer-social__items:hover .footer-social__items--facebook {
+    background: white;
+    color: #4d6baa;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4); }
+  .footer-social__items:hover .footer-social__items--twitter {
+    background: white;
+    color: #4fc6f8;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4); }
+  .footer-social__items:hover .footer-social__items--googleplus {
+    background: white;
+    color: #ea6060;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4); }
+  .footer-social__items:hover .footer-social__items--linkedin {
+    background: white;
+    color: #238cc8;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4); }
+  .footer-social__items:active {
+    -webkit-transform: scale(0.95);
+    -ms-transform: scale(0.95);
+    transform: scale(0.95); }
