completed desktop version

--- a/html/includes/_header.html
+++ b/html/includes/_header.html
@@ -22,8 +22,8 @@
 			</a>
 			<nav role="navigation" class="main-nav">
 				<ul>
-					<li class="main-nav__items"><a href="#">Home</a></li>
-					<li class="main-nav__items"><a href="#">Store</a></li>
+					<li class="main-nav__items"><a href="index.html">Home</a></li>
+					<li class="main-nav__items"><a href="form.html">Form</a></li>
 					<li class="main-nav__items"><a href="#">Blog </a></li>
 					<li class="main-nav__items"><a href="#">About </a></li>
 					<li class="main-nav__items"><a href="#">Contact</a></li>
