--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,6 +3,8 @@
 @import "includes/general_style";
 @import "includes/header";
 @import "includes/navigation_section";
+@import "includes/main";
+@import "includes/form";
 @import "includes/footer";
 
 
