--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1108,6 +1108,183 @@ input[type="email"]:focus:-ms-input-placeholder {
   background-color: #465e78;
   transition-duration: 1s; }
 
+.form {
+  margin-top: 1rem;
+  padding: 1rem;
+  background: white; }
+  .form fieldset {
+    margin-bottom: 2rem; }
+
+.form-about__title, .conclusion-form__title {
+  margin-bottom: 1.5rem;
+  font-weight: 400; }
+
+.form-about__items:not(:last-child), .conclusion-form__items:not(:last-child) {
+  margin-bottom: 1rem; }
+
+.form-about__items, .conclusion-form__items {
+  font-weight: 300; }
+  .form-about__items label, .conclusion-form__items label {
+    display: inline-block;
+    min-width: 5rem;
+    margin-right: 1rem;
+    cursor: pointer; }
+  .form-about__items input[type="text"], .conclusion-form__items input[type="text"] {
+    height: 2rem;
+    padding: 5px;
+    box-shadow: 0 1px white, inset 0 2px 2px rgba(0, 0, 0, 0.1);
+    border: 1px solid #b1b3b8;
+    border-radius: 2px;
+    background-color: #f5f6f7; }
+    .form-about__items input[type="text"]:focus, .conclusion-form__items input[type="text"]:focus {
+      background: white; }
+
+.form-about__items--position label {
+  padding-left: 2.2rem;
+  padding-right: .5rem;
+  cursor: pointer; }
+
+.form-about__items--position input {
+  margin-right: .5rem;
+  cursor: pointer; }
+
+.more-about__title {
+  margin-bottom: 1.5rem; }
+
+.more-about__items:not(:last-child) {
+  margin-bottom: 1rem; }
+
+.more-about__items {
+  font-weight: 300; }
+  .more-about__items label {
+    cursor: pointer; }
+  .more-about__items input[type="text"] {
+    margin-right: .5rem;
+    height: 2rem;
+    padding: 5px;
+    box-shadow: 0 1px white, inset 0 2px 2px rgba(0, 0, 0, 0.1);
+    border: 1px solid #b1b3b8;
+    border-radius: 2px;
+    background-color: #f5f6f7; }
+    .more-about__items input[type="text"]:focus {
+      background: white; }
+
+.more-about__items--position label {
+  margin-right: 2rem;
+  cursor: pointer; }
+
+.more-about__items--position input {
+  margin-left: .5rem;
+  cursor: pointer; }
+
+.usual-things {
+  margin-top: 2rem;
+  margin-bottom: 2rem; }
+
+.usual-things__title, .spamming__title, .estimate__title {
+  margin-bottom: 1.5rem;
+  font-weight: 400; }
+
+.usual-things__items {
+  margin-bottom: .5rem;
+  margin-left: 0; }
+
+.often-work__title {
+  display: block;
+  font-weight: 400;
+  margin-bottom: 1rem; }
+
+.often-work__item {
+  cursor: pointer; }
+
+.often-read {
+  margin-top: 2rem; }
+
+.often-read__title {
+  display: block;
+  font-weight: 400;
+  margin-bottom: 1rem; }
+
+.often-read__items {
+  margin-left: 0;
+  margin-bottom: .5rem; }
+
+.comments {
+  margin-top: 2rem; }
+
+.comment_title {
+  display: block;
+  font-weight: 400;
+  margin-bottom: .5rem; }
+
+.comments__textarea {
+  height: 2rem;
+  padding: 5px;
+  box-shadow: 0 1px white, inset 0 2px 2px rgba(0, 0, 0, 0.1);
+  border: 1px solid #b1b3b8;
+  border-radius: 2px;
+  background-color: #f5f6f7;
+  height: 10rem; }
+  .comments__textarea:focus {
+    background: white; }
+
+.selection-block__title {
+  display: block;
+  font-weight: 400;
+  margin-bottom: .5rem; }
+
+.conclusion-form__items--position label {
+  margin-right: 1rem;
+  min-width: 3rem; }
+
+.conclusion-form__items:not(:last-child) {
+  margin-bottom: 1.2rem; }
+
+.conclusion-form__items input[type="email"] {
+  height: 2rem;
+  padding: 5px;
+  box-shadow: 0 1px white, inset 0 2px 2px rgba(0, 0, 0, 0.1);
+  border: 1px solid #b1b3b8;
+  border-radius: 2px;
+  background-color: #f5f6f7; }
+  .conclusion-form__items input[type="email"]:focus {
+    background: white; }
+
+.spamming__title {
+  margin-bottom: .5rem;
+  line-height: 1.2rem; }
+
+.spamming__sub-title {
+  display: block;
+  font-weight: 300; }
+
+.spamming__items {
+  margin-bottom: .5rem;
+  margin-left: 0; }
+
+.estimate__title {
+  margin-bottom: .5rem; }
+
+.estimate__items {
+  margin-bottom: .5rem;
+  margin-left: 0; }
+
+.form-btn {
+  width: 6.063rem;
+  height: 2.438rem;
+  background-color: #ea6060;
+  border: none;
+  border-radius: 0.188rem 0.25rem 0.25rem 0.188rem;
+  font-size: 0.938rem;
+  text-transform: uppercase;
+  font-weight: 500;
+  color: white;
+  transition: .3s; }
+  .form-btn:hover {
+    color: #ea6060;
+    background: white;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4); }
+
 .footer {
   margin-top: 1rem;
   padding: 1rem 3rem 0 0;
