--- a/html/includes/_footer.html
+++ b/html/includes/_footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
 	<ul class="footer-nav">
 		<li class="footer-nav__items"><a href="#">Home</a></li>
-		<li class="footer-nav__items"><a href="#">Store</a></li>
+		<li class="footer-nav__items"><a href="#">Form</a></li>
 		<li class="footer-nav__items"><a href="#">Blog </a></li>
 		<li class="footer-nav__items"><a href="#">About </a></li>
 		<li class="footer-nav__items"><a href="#">Contact</a></li>
