--- a/app/css/style.css
+++ b/app/css/style.css
@@ -386,9 +386,22 @@ body {
   box-sizing: border-box; }
 
 .main-container {
-  width: 1180px;
+  min-width: auto;
+  max-width: 1180px;
   padding: 0 10px;
-  margin: 0 auto; }
+  margin: 0 auto;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  min-height: 100vh;
+  overflow: hidden; }
+
+@media only screen and (max-width: 480px) {
+  .main-container {
+    padding: 0; } }
 
 ul {
   list-style-type: none; }
@@ -423,15 +436,6 @@ img {
   clip: rect(0, 0, 0, 0);
   overflow: hidden; }
 
-.main-container {
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  min-height: 100vh; }
-
 .page-header {
   padding-top: 1rem; }
 
@@ -449,7 +453,8 @@ img {
   -ms-flex-line-pack: start;
   align-content: flex-start;
   height: 3.75rem;
-  background: white; }
+  background: white;
+  margin: 0 auto; }
 
 .menu-btn {
   display: block;
@@ -469,17 +474,23 @@ img {
       color: #56ccc8; }
 
 .main-nav {
-  margin-right: 8%; }
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin-right: 8%;
+  -webkit-flex-basis: 41%;
+  -ms-flex-preferred-size: 41%;
+  flex-basis: 41%; }
   .main-nav ul {
-    width: 30rem;
+    width: 100%;
     height: 3.75rem;
     list-style-type: none;
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    -webkit-justify-content: space-between;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
+    -webkit-justify-content: space-around;
+    -ms-flex-pack: distribute;
+    justify-content: space-around;
     -webkit-align-items: center;
     -ms-flex-align: center;
     align-items: center;
@@ -562,6 +573,172 @@ img {
     .user a:hover {
       color: #fff;
       background: #56ccc8; }
+
+@media only screen and (max-width: 992px) {
+  .menu-btn {
+    background: white; }
+    .menu-btn .icon-menu2 {
+      color: white;
+      font-size: 0; }
+  .search-page {
+    padding-left: 10%; }
+  .button-container {
+    position: fixed;
+    padding: 1rem;
+    top: 143px;
+    left: 10px;
+    width: 3.75rem;
+    height: 3.75rem;
+    cursor: pointer;
+    z-index: 100;
+    transition: opacity .25s ease;
+    background-color: #56ccc8; }
+    .button-container:hover {
+      opacity: .7; }
+    .button-container.active {
+      opacity: .5; }
+      .button-container.active .top {
+        -webkit-transform: translateY(11px) translateX(0) rotate(45deg);
+        -ms-transform: translateY(11px) translateX(0) rotate(45deg);
+        transform: translateY(11px) translateX(0) rotate(45deg);
+        background: black; }
+      .button-container.active .middle {
+        opacity: 0;
+        background: black; }
+      .button-container.active .bottom {
+        -webkit-transform: translateY(-11px) translateX(0) rotate(-45deg);
+        -ms-transform: translateY(-11px) translateX(0) rotate(-45deg);
+        transform: translateY(-11px) translateX(0) rotate(-45deg);
+        background: black; }
+    .button-container span {
+      background: #fff;
+      border: none;
+      height: 3px;
+      width: 30px;
+      position: absolute;
+      top: 18px;
+      left: 15px;
+      transition: all .35s ease;
+      cursor: pointer; }
+      .button-container span:nth-of-type(2) {
+        top: 29px; }
+      .button-container span:nth-of-type(3) {
+        top: 40px; }
+  .main-nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 0;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity .35s, visibility .35s, height .35s;
+    overflow: hidden;
+    z-index: 1; }
+    .main-nav.open {
+      opacity: .9;
+      visibility: visible;
+      height: 100%;
+      background: #56ccc8; }
+      .main-nav.open li {
+        -webkit-animation: fadeInRight .5s ease forwards;
+        animation: fadeInRight .5s ease forwards;
+        -webkit-animation-delay: .35s;
+        animation-delay: .35s; }
+        .main-nav.open li:nth-of-type(2) {
+          -webkit-animation-delay: .4s;
+          animation-delay: .4s; }
+        .main-nav.open li:nth-of-type(3) {
+          -webkit-animation-delay: .5s;
+          animation-delay: .5s; }
+        .main-nav.open li:nth-of-type(4) {
+          -webkit-animation-delay: .6s;
+          animation-delay: .6s; }
+        .main-nav.open li:nth-of-type(5) {
+          -webkit-animation-delay: .7s;
+          animation-delay: .7s; }
+        .main-nav.open li:nth-of-type(6) {
+          -webkit-animation-delay: .8s;
+          animation-delay: .8s; }
+        .main-nav.open li:nth-of-type(7) {
+          -webkit-animation-delay: .9s;
+          animation-delay: .9s; }
+  .main-nav ul {
+    margin-right: 0;
+    margin-top: 320px;
+    text-align: center;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+    .main-nav ul li {
+      display: block;
+      opacity: 0; }
+    .main-nav ul a {
+      display: block;
+      margin: 35px;
+      font-size: 24px;
+      color: rgba(0, 0, 0, 0.5);
+      transition: .4s; }
+      .main-nav ul a:hover {
+        font-weight: 600;
+        color: black; }
+  @-webkit-keyframes fadeInRight {
+    0% {
+      opacity: 0;
+      left: 20%; }
+    100% {
+      opacity: 1;
+      left: 0; } }
+  @keyframes fadeInRight {
+    0% {
+      opacity: 0;
+      left: 20%; }
+    100% {
+      opacity: 1;
+      left: 0; } }
+  /**/ }
+
+@media only screen and (max-width: 768px) {
+  .search-page {
+    padding-left: 1%; }
+  .button-container {
+    top: 60px; }
+  .social-link-set {
+    margin: 0 0 0 .5rem; }
+  .search-page__field {
+    width: 100%;
+    height: 3.65rem; }
+  .menu-btn {
+    display: none; } }
+
+@media only screen and (max-width: 480px) {
+  .button-container {
+    top: 30px; }
+  .search-page__field {
+    margin-right: 0; }
+  .navigation {
+    display: block;
+    height: 7.4rem; }
+  .social-link-set {
+    margin: 0;
+    float: left;
+    height: auto;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    border: none; }
+    .social-link-set a {
+      height: 3.75rem; }
+  .user {
+    float: right; }
+  .search-page__submit {
+    width: 25px;
+    height: 25px;
+    background-size: 25px; }
+    .search-page__submit:hover {
+      background-size: 25px; }
+  .page-header__logo {
+    margin-bottom: 1rem; } }
 
 .communication__navigation {
   float: left;
