--- a/scss/includes/_general_style.scss
+++ b/scss/includes/_general_style.scss
@@ -2,9 +2,19 @@ html,body                       { width:100%; height:100%; box-sizing: border-bo
 body                            { padding:0; margin:0; font:16px 'Roboto', sans-serif; background:#465e78; color: #475055; line-height: 1; }
 *, *:before, *:after { box-sizing: border-box; }
 .main-container{
-  width: 1180px;
+  min-width: auto;
+  max-width: 1180px;
   padding: 0 10px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  overflow: hidden;
+}
+@media only screen and (max-width: 480px) {
+  .main-container{
+    padding: 0;
+  }
 }
 ul{
   list-style-type:none ;
@@ -18,12 +28,6 @@ input, textarea{
 a :hover,  a:focus, a:active,  input:hover, input:focus  {
   transition:0.2s;
 }
-//div,p,a,span,em,strong,img,h1,h2,h3,h4,h5,h6,ul,ol,li,dl,dt,dd,table,td,tr,form,fieldset,label,select,checkbox,input,textarea {
-//  padding:0;
-//  margin:0;
-//  outline:none;
-//  list-style:none;
-//}
 
 
 .clearfix:after {
@@ -50,12 +54,6 @@ img{
   overflow: hidden;
 }
 
-.main-container{
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-
-}
 
 
 
