--- a/html/includes/_header.html
+++ b/html/includes/_header.html
@@ -21,9 +21,9 @@
 				<i class="icon-menu2"></i>
 			</a>
 			<div class="button-container" id="toggle">
-				<span class="top"></span>
-				<span class="middle"></span>
-				<span class="bottom"></span>
+				<span class="button-container__top"></span>
+				<span class="button-container__topmiddle"></span>
+				<span class="button-container__bottom"></span>
 			</div>
 			<nav role="navigation" class="main-nav">
 				<ul>
