--- a/scss/includes/_main.scss
+++ b/scss/includes/_main.scss
@@ -1,17 +1,22 @@
-
-
 /////main/////////////////////
-.main-content{
+.main-content {
   display: flex;
   justify-content: space-around;
+  @media only screen and (max-width: 992px) {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
-
-.portfolio{
+.portfolio {
   width: 74%;
+  @media only screen and (max-width: 992px) {
+    width: 100%;
+  }
 }
 
-.tabs{
+.tabs {
   display: table;
   table-layout: fixed;
   margin: 0;
@@ -20,7 +25,7 @@
   -webkit-transform: translateY(5px);
   transform: translateY(5px);
 
-  >li{
+  > li {
     transition-duration: .25s;
     display: table-cell;
     list-style: none;
@@ -31,7 +36,7 @@
     cursor: pointer;
     color: white;
 
-    &:before{
+    &:before {
       z-index: -1;
       position: absolute;
       content: "";
@@ -46,17 +51,17 @@
 
     }
 
-    &:hover{
-      &:before{
+    &:hover {
+      &:before {
         -webkit-transform: translateY(70%);
         transform: translateY(70%);
       }
     }
 
-    &.active{
+    &.active {
       color: rgb(80, 85, 90);
 
-      &:before{
+      &:before {
         transition-duration: .5s;
         background-color: white;
         -webkit-transform: translateY(0);
@@ -66,15 +71,14 @@
   }
 }
 
-.tab-content{
+.tab-content {
   margin: 0;
   padding: 0;
   background-color: white;
   position: relative;
   width: 100%;
 
-
-  >li{
+  > li {
     width: 100%;
     position: absolute;
     top: 0;
@@ -83,76 +87,110 @@
     display: none;
     list-style: none;
 
-    .content-wrapper{
+    .content-wrapper {
       text-align: center;
       width: 100%;
       padding: 3rem 1rem;
       background-color: white;
+      @media only screen and (max-width: 480px) {
+        padding: 3rem 0;
+      }
     }
   }
 }
 
-.content-wrapper{
-  img{
+.content-wrapper {
+  img {
     width: 100%;
     height: auto;
     border-radius: 5px;
   }
+
 }
-.tab-content__item{
+
+.tab-content__item {
   padding: 3rem;
   border-bottom: 1px solid rgba(71, 80, 85, .2);
+  @media only screen and (max-width: 480px) {
+    padding: 3rem .2rem;
+  }
 }
-.tab-content__item:last-child{
-  border-bottom:none;
+
+.tab-content__item:last-child {
+  border-bottom: none;
 }
-.tab-content__img-wrap{
+
+.tab-content__img-wrap {
   display: block;
   float: left;
   max-width: 400px;
   margin-right: 2rem;
+  @media only screen and (max-width: 768px) {
+    float: none;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  @media only screen and (max-width: 480px) {
+    min-width: 100%;
+    max-width: 100%;
+    img {
+      width: 100%;
+    }
+  }
 }
-.tab-content__title{
+
+.tab-content__title {
   text-align: left;
   font-weight: 300;
   font-size: 2rem;
+  @media only screen and (max-width: 768px) {
+    text-align: center;
+  }
 }
 
-.tab-content__descr{
+.tab-content__descr {
   display: block;
   text-align: left;
   line-height: 1.2rem;
   font-weight: 300;
-  a{
+  a {
     display: block;
     padding-right: 1rem;
-    color:#56ccc8 ;
+    color: #56ccc8;
+  }
+  @media only screen and (max-width: 768px) {
+    text-align: center;
   }
 }
 
-.right-bar{
+.right-bar {
   width: 24%;
-  margin-top:3.75rem;
+  margin-top: 3.75rem;
   padding: 1rem 1rem;
   background: white;
-  article{
+  article {
     padding-bottom: 3rem;
     border-bottom: 1px solid rgba(71, 80, 85, .2);
   }
+  @media only screen and (max-width: 992px) {
+    width: 100%;
+    text-align: center;
+  }
 }
 
-.mev-company__logo{
+.mev-company__logo {
   text-align: center;
 }
-.mev-company__quote{
-  margin-left:1rem ;
+
+.mev-company__quote {
+  margin-left: 1rem;
   margin-right: 1rem;
 
-  font:italic 300 1rem "Roboto";
+  font: italic 300 1rem "Roboto";
 }
+
 .mev-company__link {
   font: 100 .8rem "Robot";
-
 
   a {
     text-align: right;
@@ -160,68 +198,79 @@
     color: inherit;
   }
 }
-.advantages{
+
+.advantages {
   text-align: center;
 }
-.mev-info__title{
-  font:300  1.5rem "Roboto";
+
+.mev-info__title {
+  font: 300 1.5rem "Roboto";
   text-align: center;
 
 }
-.mev-info__quote{
-  margin-left:1rem ;
+
+.mev-info__quote {
+  margin-left: 1rem;
   margin-right: 1rem;
-  font:italic 300 1rem "Roboto";
+  font: italic 300 1rem "Roboto";
 }
-.advantages__item{
-  margin-bottom:2rem;
-  p{
+
+.advantages__item {
+  margin-bottom: 2rem;
+  p {
     font: 300 1rem "Roboto";
   }
 }
-.advantages__logo{
+
+.advantages__logo {
   display: block;
   text-align: center;
   margin: 0 auto;
 }
 
-.advantages__title{
-  font:300  1.3rem "Roboto";
+.advantages__title {
+  font: 300 1.3rem "Roboto";
 }
 
-.advantages__list{
-  margin-bottom:1.5rem;
+.advantages__list {
+  margin-bottom: 1.5rem;
   text-align: left;
   list-style-type: disc;
-  font:300  1rem/1.5rem "Roboto";
+  font: 300 1rem/1.5rem "Roboto";
+  @media only screen and (max-width: 992px) {
+    width: 20rem;
+    margin: 2rem auto;
+  }
 }
 
-.advantages__link{
+.advantages__link {
   display: inline-block;
   padding-bottom: 3px;
   color: #ad0000;
   font-size: .9rem;
   border-bottom: 1px solid #d9d8d3;
-  &:hover{
-    color:#676765;
+  &:hover {
+    color: #676765;
     border-bottom: 1px solid #676765;
   }
 
 }
-.combo-box__title{
+
+.combo-box__title {
   font: 300 1.5rem "Roboto";
   text-align: center;
 }
-.colors{
+
+.colors {
   text-align: center;
   margin: 0;
-  padding:1rem 0;
+  padding: 1rem 0;
 
-  >li{
+  > li {
     list-style: none;
     width: 2rem;
     height: 2rem;
-    margin-bottom:1rem;
+    margin-bottom: 1rem;
     border-radius: 50%;
     border-bottom: 5px solid rgba(0, 0, 0, .1);
     display: inline-block;
@@ -230,43 +279,43 @@
     transition-duration: .2s;
     box-shadow: 0 2px 1px rgba(0, 0, 0, .2);
 
-    &:hover{
+    &:hover {
       -webkit-transform: scale(1.2);
       transform: scale(1.2);
       border-bottom: 10px solid rgba(0, 0, 0, .15);
       box-shadow: 0 10px 10px rgba(0, 0, 0, .2);
     }
 
-    &.active-color{
+    &.active-color {
       -webkit-transform: scale(1.2) translateY(-10px);
       transform: scale(1.2) translateY(-10px);
       box-shadow: 0 10px 10px rgba(0, 0, 0, .2);
       border-bottom: 20px solid rgba(0, 0, 0, .15);
     }
 
-    &:nth-child(1){
+    &:nth-child(1) {
       background-color: #2ecc71;
     }
 
-    &:nth-child(2){
+    &:nth-child(2) {
       background-color: #D64A4B;
     }
 
-    &:nth-child(3){
+    &:nth-child(3) {
       background-color: #8e44ad;
     }
 
-    &:nth-child(4){
+    &:nth-child(4) {
       background-color: #465e78;
     }
 
-    &:nth-child(5){
+    &:nth-child(5) {
       background-color: #bdc3c7;
     }
   }
 }
 
-.bg-color{
+.bg-color {
   background-color: #465e78;
   transition-duration: 1s;
 }
