--- a/app/css/style.css
+++ b/app/css/style.css
@@ -583,7 +583,7 @@ img {
   .search-page {
     padding-left: 10%; }
   .button-container {
-    position: fixed;
+    position: absolute;
     padding: 1rem;
     top: 143px;
     left: 10px;
@@ -597,15 +597,15 @@ img {
       opacity: .7; }
     .button-container.active {
       opacity: .5; }
-      .button-container.active .top {
+      .button-container.active .button-container__top {
         -webkit-transform: translateY(11px) translateX(0) rotate(45deg);
         -ms-transform: translateY(11px) translateX(0) rotate(45deg);
         transform: translateY(11px) translateX(0) rotate(45deg);
         background: black; }
-      .button-container.active .middle {
+      .button-container.active .button-container__middle {
         opacity: 0;
         background: black; }
-      .button-container.active .bottom {
+      .button-container.active .button-container__bottom {
         -webkit-transform: translateY(-11px) translateX(0) rotate(-45deg);
         -ms-transform: translateY(-11px) translateX(0) rotate(-45deg);
         transform: translateY(-11px) translateX(0) rotate(-45deg);
@@ -664,6 +664,7 @@ img {
           -webkit-animation-delay: .9s;
           animation-delay: .9s; }
   .main-nav ul {
+    padding-left: 0;
     margin-right: 0;
     margin-top: 320px;
     text-align: center;
@@ -702,6 +703,7 @@ img {
   .search-page {
     padding-left: 1%; }
   .button-container {
+    position: fixed;
     top: 60px; }
   .social-link-set {
     margin: 0 0 0 .5rem; }
@@ -740,18 +742,49 @@ img {
   .page-header__logo {
     margin-bottom: 1rem; } }
 
+.communication {
+  overflow: hidden;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+  transition: 1s; }
+
+@media only screen and (max-width: 992px) {
+  .communication {
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    transition: 1s; } }
+
 .communication__navigation {
-  float: left;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   width: 50%;
   margin-right: 1.5%;
   margin-top: 1rem; }
+  @media only screen and (max-width: 992px) {
+    .communication__navigation {
+      width: 100%;
+      margin-right: 0; } }
 
 .column-block {
   margin: 0;
   padding: 0;
-  float: left;
-  width: 48%;
-  min-height: 695px; }
+  width: 48%; }
 
 .communication-menu {
   margin: 0;
@@ -779,8 +812,12 @@ img {
 
 .contact {
   margin-top: 0;
+  margin-bottom: 0;
   padding: 2rem 0 1.9rem 1.3rem;
   background: #c5cdd1; }
+  @media only screen and (max-width: 480px) {
+    .contact {
+      padding: 1.8rem 0 1.5rem .5rem; } }
 
 .contact__items:not(:last-child) {
   margin-bottom: 2rem; }
@@ -805,6 +842,11 @@ img {
   .contact__items a:hover {
     opacity: .7; }
 
+@media only screen and (max-width: 480px) {
+  .contact__items p, .contact__items address, .contact__items a {
+    padding-left: 0;
+    text-align: center; } }
+
 .contact__icon {
   float: left; }
   .contact__icon i {
@@ -812,6 +854,14 @@ img {
     color: white; }
   .contact__icon .icon-location {
     font-size: 1.4rem; }
+  @media only screen and (max-width: 480px) {
+    .contact__icon {
+      float: none;
+      text-align: center;
+      display: block;
+      margin-bottom: .5rem; }
+      .contact__icon i {
+        font-size: 2rem; } }
 
 .sub-menu-container {
   float: right;
@@ -839,9 +889,12 @@ img {
       width: 20px;
       height: 20px;
       background: url("../img/arrow-rotate.png") no-repeat; }
+  @media only screen and (max-width: 480px) {
+    .sub-menu {
+      padding: 1.8rem 0 1.5rem .5rem; } }
 
 .sub-menu:last-child {
-  padding-bottom: 3.55rem;
+  padding-bottom: 3rem;
   border-bottom: none; }
 
 .sub-menu__title {
@@ -862,7 +915,6 @@ img {
   margin-bottom: 18px; }
 
 .social {
-  float: right;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
@@ -872,13 +924,48 @@ img {
   -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  padding-top: 1rem;
   width: 48.5%; }
+  @media only screen and (max-width: 992px) {
+    .social {
+      width: 100%; } }
+  @media only screen and (max-width: 768px) {
+    .social {
+      -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -webkit-justify-content: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      -webkit-align-items: center;
+      -ms-flex-align: center;
+      align-items: center; } }
 
 .social-menu {
-  padding: 2rem 1.5rem 1rem;
+  margin: 0;
+  margin-bottom: .7rem;
+  padding-left: 1.5rem;
+  padding-top: 2rem;
   width: 48.5%;
   list-style-type: none;
   background: white; }
+  @media only screen and (max-width: 992px) {
+    .social-menu {
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-justify-content: space-around;
+      -ms-flex-pack: distribute;
+      justify-content: space-around;
+      -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+      flex-wrap: wrap; } }
+  @media only screen and (max-width: 768px) {
+    .social-menu {
+      width: 100%;
+      -webkit-justify-content: center;
+      -ms-flex-pack: center;
+      justify-content: center; } }
 
 .social-menu__item {
   margin-bottom: 2rem; }
@@ -890,6 +977,10 @@ img {
       background: #4fc6f8; }
     .social-menu__item a:hover .social-menu__text-title {
       color: #4fc6f8; }
+
+@media only screen and (max-width: 992px) {
+  .social-menu__text-title {
+    font-size: 0; } }
 
 .social-menu__item:last-child {
   margin-bottom: 0; }
@@ -912,11 +1003,32 @@ img {
   color: #475055; }
 
 .social-widget-container {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   width: 48.5%;
-  margin-top: 1rem; }
+  margin-bottom: .55rem; }
+  @media only screen and (max-width: 992px) {
+    .social-widget-container {
+      -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+      flex-direction: row; } }
+  @media only screen and (max-width: 768px) {
+    .social-widget-container {
+      width: 100%;
+      -webkit-justify-content: center;
+      -ms-flex-pack: center;
+      justify-content: center; } }
 
 .social-widget {
-  margin-bottom: 1rem;
+  margin: 0;
+  padding: 0;
   cursor: pointer; }
   .social-widget img {
     width: 100%; }
@@ -926,10 +1038,16 @@ img {
     -webkit-transform: scale(1.02);
     -ms-transform: scale(1.02);
     transform: scale(1.02); }
+  @media only screen and (max-width: 768px) {
+    .social-widget {
+      width: 100%; } }
 
 .sign-in {
   width: 100%;
   background: white; }
+  @media only screen and (max-width: 992px) {
+    .sign-in {
+      padding-bottom: 1rem; } }
 
 .sign-in__title {
   text-align: center;
@@ -944,7 +1062,9 @@ img {
 .sign-in__list {
   list-style-type: none;
   text-align: center;
-  padding-left: 0; }
+  padding-left: 0;
+  margin-bottom: 0;
+  padding-bottom: 0; }
 
 .sign-in__items {
   display: inline-block; }
@@ -989,7 +1109,7 @@ img {
   margin-right: 1.5rem; }
 
 .subscription {
-  margin-top: 1rem;
+  margin-top: .7rem;
   padding-bottom: .5rem;
   width: 100%;
   background: white; }
@@ -1017,6 +1137,10 @@ img {
   .subscription-form__email:focus {
     border: none;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4); }
+  @media only screen and (max-width: 480px) {
+    .subscription-form__email {
+      width: 100%;
+      margin-bottom: .5rem; } }
 
 .subscription-form__submit {
   width: 6.063rem;
@@ -1032,6 +1156,9 @@ img {
     color: #ea6060;
     background: white;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4); }
+  @media only screen and (max-width: 480px) {
+    .subscription-form__submit {
+      width: 100%; } }
 
 input[type="email"]::-webkit-input-placeholder {
   text-indent: 0;
@@ -1072,9 +1199,23 @@ input[type="email"]:focus:-ms-input-placeholder {
   -webkit-justify-content: space-around;
   -ms-flex-pack: distribute;
   justify-content: space-around; }
+  @media only screen and (max-width: 992px) {
+    .main-content {
+      -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -webkit-justify-content: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      -webkit-align-items: center;
+      -ms-flex-align: center;
+      align-items: center; } }
 
 .portfolio {
   width: 74%; }
+  @media only screen and (max-width: 992px) {
+    .portfolio {
+      width: 100%; } }
 
 .tabs {
   display: table;
@@ -1139,6 +1280,9 @@ input[type="email"]:focus:-ms-input-placeholder {
       width: 100%;
       padding: 3rem 1rem;
       background-color: white; }
+      @media only screen and (max-width: 480px) {
+        .tab-content > li .content-wrapper {
+          padding: 3rem 0; } }
 
 .content-wrapper img {
   width: 100%;
@@ -1148,6 +1292,9 @@ input[type="email"]:focus:-ms-input-placeholder {
 .tab-content__item {
   padding: 3rem;
   border-bottom: 1px solid rgba(71, 80, 85, 0.2); }
+  @media only screen and (max-width: 480px) {
+    .tab-content__item {
+      padding: 3rem .2rem; } }
 
 .tab-content__item:last-child {
   border-bottom: none; }
@@ -1157,11 +1304,25 @@ input[type="email"]:focus:-ms-input-placeholder {
   float: left;
   max-width: 400px;
   margin-right: 2rem; }
+  @media only screen and (max-width: 768px) {
+    .tab-content__img-wrap {
+      float: none;
+      margin-left: auto;
+      margin-right: auto; } }
+  @media only screen and (max-width: 480px) {
+    .tab-content__img-wrap {
+      min-width: 100%;
+      max-width: 100%; }
+      .tab-content__img-wrap img {
+        width: 100%; } }
 
 .tab-content__title {
   text-align: left;
   font-weight: 300;
   font-size: 2rem; }
+  @media only screen and (max-width: 768px) {
+    .tab-content__title {
+      text-align: center; } }
 
 .tab-content__descr {
   display: block;
@@ -1172,6 +1333,9 @@ input[type="email"]:focus:-ms-input-placeholder {
     display: block;
     padding-right: 1rem;
     color: #56ccc8; }
+  @media only screen and (max-width: 768px) {
+    .tab-content__descr {
+      text-align: center; } }
 
 .right-bar {
   width: 24%;
@@ -1181,6 +1345,10 @@ input[type="email"]:focus:-ms-input-placeholder {
   .right-bar article {
     padding-bottom: 3rem;
     border-bottom: 1px solid rgba(71, 80, 85, 0.2); }
+  @media only screen and (max-width: 992px) {
+    .right-bar {
+      width: 100%;
+      text-align: center; } }
 
 .mev-company__logo {
   text-align: center; }
@@ -1201,7 +1369,7 @@ input[type="email"]:focus:-ms-input-placeholder {
   text-align: center; }
 
 .mev-info__title {
-  font: 300  1.5rem "Roboto";
+  font: 300 1.5rem "Roboto";
   text-align: center; }
 
 .mev-info__quote {
@@ -1220,13 +1388,17 @@ input[type="email"]:focus:-ms-input-placeholder {
   margin: 0 auto; }
 
 .advantages__title {
-  font: 300  1.3rem "Roboto"; }
+  font: 300 1.3rem "Roboto"; }
 
 .advantages__list {
   margin-bottom: 1.5rem;
   text-align: left;
   list-style-type: disc;
-  font: 300  1rem/1.5rem "Roboto"; }
+  font: 300 1rem/1.5rem "Roboto"; }
+  @media only screen and (max-width: 992px) {
+    .advantages__list {
+      width: 20rem;
+      margin: 2rem auto; } }
 
 .advantages__link {
   display: inline-block;
@@ -1291,6 +1463,15 @@ input[type="email"]:focus:-ms-input-placeholder {
   background: white; }
   .form fieldset {
     margin-bottom: 2rem; }
+  @media only screen and (max-width: 480px) {
+    .form {
+      padding: 0;
+      padding-bottom: 2rem; }
+      .form dd {
+        padding-left: 0;
+        margin-left: 0; }
+        .form dd input {
+          width: 100%; } }
 
 .form-about__title, .conclusion-form__title {
   margin-bottom: 1.5rem;
@@ -1306,6 +1487,12 @@ input[type="email"]:focus:-ms-input-placeholder {
     min-width: 5rem;
     margin-right: 1rem;
     cursor: pointer; }
+    @media only screen and (max-width: 480px) {
+      .form-about__items label, .conclusion-form__items label {
+        margin-bottom: .5rem;
+        padding-bottom: .5rem;
+        display: block;
+        padding-top: .5rem; } }
   .form-about__items input[type="text"], .conclusion-form__items input[type="text"] {
     height: 2rem;
     padding: 5px;
@@ -1404,6 +1591,9 @@ input[type="email"]:focus:-ms-input-placeholder {
   height: 10rem; }
   .comments__textarea:focus {
     background: white; }
+  @media only screen and (max-width: 480px) {
+    .comments__textarea {
+      min-width: 100%; } }
 
 .selection-block__title {
   display: block;
@@ -1461,6 +1651,14 @@ input[type="email"]:focus:-ms-input-placeholder {
     color: #ea6060;
     background: white;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4); }
+  @media only screen and (max-width: 480px) {
+    .form-btn {
+      margin: 0 auto;
+      text-align: center;
+      width: 100%; } }
+  @media only screen and (max-width: 320px) {
+    .form-btn {
+      width: 100%; } }
 
 .footer {
   margin-top: 1rem;
@@ -1472,11 +1670,26 @@ input[type="email"]:focus:-ms-input-placeholder {
   -ms-flex-pack: justify;
   justify-content: space-between;
   background: white; }
+  @media only screen and (max-width: 768px) {
+    .footer {
+      -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -webkit-justify-content: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      -webkit-align-items: center;
+      -ms-flex-align: center;
+      align-items: center;
+      padding: 1rem 0; } }
 
 .footer-nav {
   margin-top: 1.5rem; }
   .footer-nav li {
     display: inline-block; }
+  @media only screen and (max-width: 768px) {
+    .footer-nav {
+      padding-left: 0; } }
 
 .footer-nav__items:not(:last-child) {
   margin-right: 1rem; }
@@ -1488,6 +1701,10 @@ input[type="email"]:focus:-ms-input-placeholder {
 
 .footer-social li {
   display: inline-block; }
+
+@media only screen and (max-width: 768px) {
+  .footer-social {
+    padding-left: 0; } }
 
 .footer-social__items:not(:last-child) {
   margin-right: 1rem; }
