--- a/scss/includes/_header.scss
+++ b/scss/includes/_header.scss
@@ -155,7 +155,7 @@
     padding-left: 10%;
   }
   .button-container {
-    position: fixed;
+    position: absolute;
     padding: 1rem;
     top: 143px;
     left: 10px;
@@ -168,19 +168,17 @@
     &:hover {
       opacity: .7;
     }
-
     &.active {
       opacity: .5;
-      .top {
+      .button-container__top {
         transform: translateY(11px) translateX(0) rotate(45deg);
         background: black;
       }
-      .middle {
+      .button-container__middle {
         opacity: 0;
         background: black;
       }
-
-      .bottom {
+      .button-container__bottom {
         transform: translateY(-11px) translateX(0) rotate(-45deg);
         background: black;
       }
@@ -206,7 +204,6 @@
       }
     }
   }
-
   .main-nav {
     position: fixed;
     top: 0;
@@ -224,7 +221,6 @@
       visibility: visible;
       height: 100%;
       background: #56ccc8;
-
       li {
         animation: fadeInRight .5s ease forwards;
         animation-delay: .35s;
@@ -252,6 +248,7 @@
   }
 
   .main-nav ul {
+    padding-left: 0;
     margin-right: 0;
     margin-top: 320px;
     text-align: center;
@@ -293,6 +290,7 @@
     padding-left: 1%;
   }
   .button-container {
+    position: fixed;
     top: 60px;
   }
   .social-link-set {
